<resources>
    <string name="app_name">Lab1</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="Main_text">Account</string>
    <string name="Payment_details">Payments</string>

    <string name="My_account">my information</string>
    <string name="bank">bank details</string>

    <string name="new_payment">New Payment</string>
    <string name="Payment_history">Payment History</string>

    <string name="recipient_name">Recipient name:</string>
    <string name="recipient_account">Recipient account:</string>
    <string name="payment_info">Payment information:</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="accept">Accept</string>
</resources>
