<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tasklist.vinvin.lab1.MainActivity"
    >

    <TextView
        android:id="@+id/Account_text_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Main_text"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/my_info"
        android:background="@color/colorLightBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:text="@string/My_account"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textAlignment="textStart"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Account_text_info"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/bank_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue"
        android:layout_marginStart="40dp"
        android:text="@string/bank"
        android:textColor="@color/colorWhite"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="3dp"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_info"
        />
    <TextView
        android:id="@+id/Payment_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Payment_details"
        android:textSize="30sp"
        android:layout_marginTop="1dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorRed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_details"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_payment"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/new_payment"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="parent"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/Payment_info"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:text="@string/Payment_history"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="40dp"
        android:layout_marginTop="3dp"
        android:textAlignment="textStart"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_payment"
        />


</android.support.constraint.ConstraintLayout>
