<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    >

    <ImageView

        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/login_image"
        android:layout_margin="5dp"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <EditText
        android:hint="@string/login_username"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/box_edit"
        android:layout_margin="8dp"
        android:id="@+id/login_username"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        />
    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/box_edit"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toBottomOf="@id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/login_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:background="@drawable/button_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        />
</android.support.constraint.ConstraintLayout>