<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/new_payment"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:textStyle="normal"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recipient"
        android:text="@string/recipient_name"
        android:textSize="15sp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text"
        />

    <EditText
        android:layout_marginStart="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="7dp"
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:background="@drawable/box_edit"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:labelFor="@id/recipient"
        android:hint=""
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipient"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/account_info"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipient_account"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:layout_marginStart="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/box_edit"
        android:id="@+id/account_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:labelFor="@id/recipient"
        android:hint=""
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_info"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/pay_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:text="@string/payment_info"
        android:textStyle="normal"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_input"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/date_pick"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:labelFor="@id/pay_info"
        android:inputType="datetime"
        android:background="@drawable/box_edit"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pay_info"
        app:layout_constraintStart_toStartOf="parent"
        android:hint=""
        />
    <EditText
        android:id="@+id/amount"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:background="@drawable/box_edit"
        android:labelFor="@id/pay_info"
        android:inputType="datetime"
        android:layout_marginTop="7dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="@id/pay_info"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pay_info"
        app:layout_constraintStart_toEndOf="@id/date_pick"
        android:hint=""
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_text"
        android:text="@string/date"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_pick"
        app:layout_constraintStart_toStartOf="@id/date_pick"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount_text"
        android:text="@string/amount"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_pick"
        app:layout_constraintStart_toStartOf="@id/amount"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_payment"
        android:text="@string/accept"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>